@@ -1,3 +1,7 @@
+2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>
+
+	* sysdeps/aarch64/memcmp.S: Use L() macro for labels.
+
 2019-09-06  Wilco Dijkstra  <wdijkstr@arm.com>
 
 	* sysdeps/aarch64/memcmp.S (memcmp):
